Switch to preview version of maven-shade plugin
- Switched to a preview version of maven-shade plugin. Version 3.2.4 uses ASM version 8.0, which only supports up to Java 14 (Java 15 is not mentioned in the changelog, so it appears to have 'just worked'). The current preview version being used, however, uses ASM 9.1, which has support for Java all the way up to version 17.
- Enabled Java preview features. Just because it's fun to play around with those.